doc/pyre: more narrative on component properties

--- a/doc/pyre/pyre.tex
+++ b/doc/pyre/pyre.tex
@@ -12,7 +12,10 @@
 \makeatother
 
 % here we go
-\documentclass[10pt,compress,aspectratio169]{beamer}
+\documentclass[10pt,compress]{beamer}
+%\geometry{paperwidth=11in,paperheight=8.5in}
+%\geometry{paperwidth=128mm,paperheight=96mm}
+\geometry{paperwidth=140mm,paperheight=105mm}
 
 % packages, setup, macros, etc.
 \input{setup}
