doc/pyre: corrected the coordinates of california

--- a/doc/pyre/sections/components.tex
+++ b/doc/pyre/sections/components.tex
@@ -444,7 +444,7 @@
 
 \begin{frame}[fragile]
 %
-  \frametitle{A slightly more complicated example}
+  \frametitle{Specifying the region}
 %
   \vskip -4ex
   \begin{itemize}
