--- a/doc/pyre/sections/scope.tex
+++ b/doc/pyre/sections/scope.tex
@@ -12,6 +12,11 @@
 %
   \begin{itemize}
 %
+  \item \isce\ 3.0 hides \pyre\ completely from its users
+    \begin{itemize}
+    \item so even though this is about the framework, the word \pyre\ won't show up much
+    \end{itemize}
+%
   \item we will write a \pyre\ application that stitches together a digital elevation model
     (\dem) by downloading tiles from the \srtm\ archive
 %
