--- a/doc/pyre/config/setup.tex
+++ b/doc/pyre/config/setup.tex
@@ -225,13 +225,13 @@
 \def\th#1{\mbox{$#1^{\rm th}$}}
 
 \def\dem{{\sc dem}}
-\def\isce{{\sc isce}}
 \def\srtm{{\sc srtm}}
 \def\uml{{\sc uml}}
 
 \def\bydef{\mathrel{\mathop:}=}
 
 \def\pyre{{\color{pyre@pipe}\tt pyre}}
+\def\isce{{\color{pyre@pipe}\tt isce}}
 
 \def\order#1{\mbox{$\mathcal{O}(#1)$}}
 
