doc/pyre: merged {scope} with {intro}

--- a/doc/pyre/sections/components.tex
+++ b/doc/pyre/sections/components.tex
@@ -151,7 +151,7 @@
       dem.py --srtm.resolution=1
     \end{ish}
 %
-  \item there two ingredients missing:
+  \item there are two ingredients missing:
     \begin{itemize}
     \item \trait{resolution} must become a \emph{property} of \component{SRTM}
     \item \component{SRTM} and its instances need \emph{names} so the user can refer to them
