doc/pyre: more narrative on properties; restyled with the fourier fonts for legibility

--- a/doc/pyre/config/setup.tex
+++ b/doc/pyre/config/setup.tex
@@ -11,17 +11,17 @@
 % beamer configuration
 \usepackage{pyre}
 
-% typesetting interactive sessions
-\usepackage{fancyvrb}
-
 % dimensions
 \usepackage{fancyhdr}
 
 % fonts
-\usepackage{amsfonts}
-\usepackage{times}
-\usepackage{relsize}
 \usepackage[utf8x]{inputenc}
+\usepackage{relsize}
+\usepackage{amsfonts}
+%\usepackage{times}
+%\usepackage{lmodern}
+\usepackage{fourier}
+\renewcommand*\familydefault{\sfdefault}
 
 % figures
 \usepackage{graphicx}
@@ -48,12 +48,20 @@
 \definecolor{pyre@shale}{rgb}{0.38, .38, .38}
 \definecolor{pyre@brick}{rgb}{0.95, .50, .30}
 
-\definecolor{keywordcolor}{rgb}{0.25,0.25,1.0}
 \definecolor{commentcolor}{gray}{0.75}
 \definecolor{identifiercolor}{rgb}{0.5, 0.25, 0.75}
-\definecolor{stringcolor}{rgb}{0.5, 0.25, 0.75}
+\definecolor{keywordcolor}{rgb}{0.25,0.25,1.0}
 \definecolor{linenumbercolor}{gray}{0.75}
 \definecolor{listingbgcolor}{gray}{1.0}
+\definecolor{stringcolor}{rgb}{0.5, 0.25, 0.75}
+
+% pML
+\definecolor{pml@basictypecolor}{rgb}{0.94, 0.5, 0.10}
+\definecolor{pml@componentcolor}{rgb}{0.0, 0.2, 0.4}
+\definecolor{pml@defaultvaluecolor}{rgb}{0.48, 0.47, 0.38}
+\definecolor{pml@protocolcolor}{rgb}{0.1367, 0.4766, 0.7031}
+\definecolor{pml@schemacolor}{rgb}{0.50, 0.50, 0.19}
+\definecolor{pml@traitcolor}{rgb}{0.1367, 0.4766, 0.7031}
 
 % listings and their configurations
 \usepackage[slide,algoruled,linesnumbered,noend]{algorithm2e}
@@ -171,21 +179,8 @@
 \def\newblock{\small}
 
 % misc
-\usepackage{stackrel}
-
-\usepackage{dcolumn}
-\newcolumntype{d}[1]{D{.}{.}{#1}}
-
 \usepackage{url}
 \usepackage{hyperref}
-
-% itemize with small items
-\newenvironment{xitemize}{%
-  \itemize
-  \scriptsize
-}{%
-  \enditemize
-}
 
 % shortcuts
 \def\slideref#1{{Slide~\ref{slide:#1}}}
@@ -224,7 +219,9 @@
 \def\html{{\tt html}}
 \def\th#1{\mbox{$#1^{\rm th}$}}
 
+% small caps
 \def\dem{{\sc dem}}
+\def\isce{{\sc isce}}
 \def\srtm{{\sc srtm}}
 \def\uml{{\sc uml}}
 
@@ -235,9 +232,10 @@
 
 \def\order#1{\mbox{$\mathcal{O}(#1)$}}
 
+\def\basictype#1{\mbox{\color{pml@basictypecolor}\tt #1}}
 \def\class#1{\mbox{\tt #1}}
 \def\constraint#1{\mbox{\tt #1}}
-\def\component#1{\mbox{\tt #1}}
+\def\component#1{\mbox{\color{pml@componentcolor}\tt #1}}
 \def\function#1{\mbox{\tt #1}}
 \def\identifier#1{\mbox{\tt #1}}
 \def\keyword#1{\mbox{\tt #1}}
@@ -246,9 +244,9 @@
 \def\operator#1{\mbox{\tt #1}}
 \def\package#1{\mbox{\tt #1}}
 \def\protocol#1{\mbox{\tt #1}}
-\def\schema#1{\mbox{\tt #1}}
+\def\schema#1{\mbox{\color{pml@schemacolor}\tt #1}}
 \def\srcfile#1{\mbox{\tt #1}}
-\def\trait#1{\mbox{\tt #1}}
+\def\trait#1{\mbox{\color{pml@traitcolor}\tt #1}}
 
 \def\TODO#1{{%
     \subsubsection*{Still to do}%
