--- a/doc/pyre/config/pyre.sty
+++ b/doc/pyre/config/pyre.sty
@@ -5,15 +5,19 @@
 % (c) 2003-2017 all rights reserved
 %
 
+% mode
 \mode<presentation>
 
+% remove the navigation toolbar
 \setbeamertemplate{navigation symbols}{}
 
-\usecolortheme{default}
-% \usefonttheme{professionalfonts}
+% fonts
+%\usefonttheme{professionalfonts}
 \usefonttheme{serif}
+%\setbeamerfont{section in head/foot}{...}
 
 % colors
+\usecolortheme{default}
 % the definitions
 \setbeamercolor{structure}{fg=pyre@pipe}
 
@@ -47,53 +51,34 @@
 % layout
 \setbeamersize{text margin left=1.0em, text margin right=1.0em}
 
-% ------------------------------------------------------------------------------
-% the header
-\ifbeamer@compress
-%
-\defbeamertemplate*{headline}{split theme}
-{%
+% -- slide decoration
+% -- the header: compressed regardless of the beamer document class option
+\defbeamertemplate*{headline}{split theme}{%
   \leavevmode%
-  \begin{beamercolorbox}[wd=.5\paperwidth,ht=2.5ex,dp=1.125ex]{section in head/foot}%
-    \insertsectionnavigationhorizontal{.5\paperwidth}{}{\hskip0pt plus1filll}%
+  \begin{beamercolorbox}[wd=0.5\paperwidth,ht=2.5ex,dp=1.125ex]{section in head/foot}%
+    \insertsectionnavigationhorizontal{0.5\paperwidth}{}{\hskip0pt plus1filll}%
   \end{beamercolorbox}%
-  \begin{beamercolorbox}[wd=.5\paperwidth,ht=2.5ex,dp=1.125ex]{subsection in head/foot}%
-    \insertsubsectionnavigationhorizontal{.5\paperwidth}{}{\hskip0pt plus1filll}%
+  \begin{beamercolorbox}[wd=0.5\paperwidth,ht=2.5ex,dp=1.125ex]{subsection in head/foot}%
+    \insertsubsectionnavigationhorizontal{0.5\paperwidth}{}{\hskip0pt plus1filll}%
   \end{beamercolorbox}%
 }
-%
-\else
-\defbeamertemplate*{headline}{split theme}
-{%
-  \leavevmode%
-  \@tempdimb=2.4375ex%
-  \ifnum\beamer@subsectionmax<\beamer@sectionmax%
-    \multiply\@tempdimb by\beamer@sectionmax%
-  \else%
-    \multiply\@tempdimb by\beamer@subsectionmax%
-  \fi%
-  \ifdim\@tempdimb>0pt%
-    \advance\@tempdimb by 1.125ex%
-    \begin{beamercolorbox}[wd=.375\paperwidth,ht=\@tempdimb]{section in head/foot}%
-      \vbox to\@tempdimb{\vfil\insertsectionnavigation{.375\paperwidth}\vfil}%
-    \end{beamercolorbox}%
-    \begin{beamercolorbox}[wd=.625\paperwidth,ht=\@tempdimb]{subsection in head/foot}%
-      \vbox to\@tempdimb{\vfil\insertsubsectionnavigation{.625\paperwidth}\vfil}%
-    \end{beamercolorbox}%
-  \fi%
-}
-%
-\fi
 
-% ------------------------------------------------------------------------------
-% the footer
+% -- place the logo on the title area of each slide
+\addtobeamertemplate{frametitle}{}{%
+  \begin{tikzpicture}[remember picture,overlay] %
+    \node[anchor=north east,yshift=-.5em] at (current page.north east) {%
+      \includegraphics[scale=0.15]{figures/pyre-logo.pdf}};%
+  \end{tikzpicture}
+}
+
+% -- the footer
 \defbeamertemplate*{footline}{split theme}
 {%
   \leavevmode%
-  \hbox{\begin{beamercolorbox}[wd=.35\paperwidth,ht=2.5ex,dp=1.125ex,leftskip=.3cm,rightskip=.3cm]{author in head/foot}%
+  \hbox{\begin{beamercolorbox}[wd=.4\paperwidth,ht=2.5ex,dp=1.125ex,leftskip=.3cm,rightskip=.3cm]{author in head/foot}%
     \usebeamerfont{author in head/foot}\insertshortauthor
   \end{beamercolorbox}%
-  \begin{beamercolorbox}[wd=.55\paperwidth,ht=2.5ex,dp=1.125ex,leftskip=.3cm,rightskip=.3cm plus1fil]{title in head/foot}%
+  \begin{beamercolorbox}[wd=.5\paperwidth,ht=2.5ex,dp=1.125ex,leftskip=.3cm,rightskip=.3cm plus1fil]{title in head/foot}%
     \usebeamerfont{title in head/foot}\insertshorttitle
   \end{beamercolorbox}%
   \begin{beamercolorbox}[wd=.1\paperwidth,ht=2.5ex,dp=1.125ex,leftskip=.3cm,rightskip=.3cm plus1fil]{title in head/foot}%
